--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset=\"UTF-8\">    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no\">    <title>Cybersecurity Essentials: Strategic Insights for Leadership</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <title>Cybersecurity Essentials: Strategic Insights for Leadership</title>
     
     <!-- Reveal.js CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.css">
@@ -104,25 +106,25 @@
                         <div class="threat-icon"><i class="fas fa-envelope-open-text"></i></div>
                         <h3>Phishing</h3>
                         <p>Deceptive messages that harvest access</p>
-                        <div class="threat-detail">Leading cause of security breaches • Increasingly sophisticated</div>
+                        <div class="threat-detail">Leading cause of security breaches &bull; Increasingly sophisticated</div>
                     </div>
                     <div class="threat-item">
                         <div class="threat-icon"><i class="fas fa-lock"></i></div>
                         <h3>Ransomware</h3>
                         <p>Data/encryption-based disruption</p>
-                        <div class="threat-detail">Significant portion of breaches • Multi-million dollar impact</div>
+                        <div class="threat-detail">Significant portion of breaches &bull; Multi-million dollar impact</div>
                     </div>
                     <div class="threat-item">
                         <div class="threat-icon"><i class="fas fa-key"></i></div>
                         <h3>Credential Compromise</h3>
                         <p>Reused or leaked passwords</p>
-                        <div class="threat-detail">Common in web application attacks • Often goes undetected</div>
+                        <div class="threat-detail">Common in web application attacks &bull; Often goes undetected</div>
                     </div>
                     <div class="threat-item">
                         <div class="threat-icon"><i class="fas fa-link"></i></div>
                         <h3>Supply-Chain & Vendor Risks</h3>
                         <p>Third-party exposure</p>
-                        <div class="threat-detail">Growing attack vector • Difficult to monitor and control</div>
+                        <div class="threat-detail">Growing attack vector &bull; Difficult to monitor and control</div>
                     </div>
                 </div>
                 <div class="key-insight">
@@ -161,7 +163,7 @@
                         <div class="impact-text">
                             <h3>Operational Downtime</h3>
                             <p>Productivity loss and system unavailability</p>
-                            <div class="impact-stat">200+ days avg. identification • 70+ days containment</div>
+                            <div class="impact-stat">200+ days avg. identification &bull; 70+ days containment</div>
                         </div>
                     </div>
                     <div class="impact-item">
@@ -169,7 +171,7 @@
                         <div class="impact-text">
                             <h3>Financial Costs</h3>
                             <p>Recovery, remediation, potential fines</p>
-                            <div class="impact-stat">Multi-million dollar average cost • Majority from business disruption</div>
+                            <div class="impact-stat">Multi-million dollar average cost &bull; Majority from business disruption</div>
                         </div>
                     </div>
                     <div class="impact-item">
@@ -177,7 +179,7 @@
                         <div class="impact-text">
                             <h3>Reputation Effects</h3>
                             <p>Customer trust and brand impact</p>
-                            <div class="impact-stat">Significant customer loss common • Long-term brand recovery needed</div>
+                            <div class="impact-stat">Significant customer loss common &bull; Long-term brand recovery needed</div>
                         </div>
                     </div>
                     <div class="impact-item">
@@ -185,7 +187,7 @@
                         <div class="impact-text">
                             <h3>Legal & Regulatory</h3>
                             <p>Compliance violations and penalties</p>
-                            <div class="impact-stat">GDPR: up to 4% revenue • SEC: material disclosure requirements</div>
+                            <div class="impact-stat">GDPR: up to 4% revenue &bull; SEC: material disclosure requirements</div>
                         </div>
                     </div>
                 </div>
@@ -206,42 +208,45 @@
                     <div class="control-category">
                         <h3><i class="fas fa-shield-alt"></i> Identity & Access Management</h3>
                         <p>Who can access what, when, and how</p>
-                        <div class="control-detail">Multi-factor authentication • Privileged access • Zero trust principles</div>
-                        <div class="effectiveness">📊 Prevents 99.9% of automated attacks</div>
+                        <div class="control-detail">Multi-factor authentication &bull; Privileged access &bull; Zero trust principles</div>
+                        <div class="effectiveness">Significantly reduces automated attacks</div>
                     </div>
                     <div class="control-category">
                         <h3><i class="fas fa-database"></i> Backup & Recovery</h3>
                         <p>Data protection and business continuity</p>
-                        <div class="control-detail">3-2-1 backup rule • Regular testing • Recovery time objectives</div>
-                        <div class="effectiveness">📊 Reduces ransomware impact by 90%</div>
+                        <div class="control-detail">3-2-1 backup rule &bull; Regular testing &bull; Recovery time objectives</div>
+                        <div class="effectiveness">Critical for ransomware recovery</div>
                     </div>
                     <div class="control-category">
                         <h3><i class="fas fa-chart-line"></i> Security Monitoring</h3>
                         <p>Continuous threat detection and response</p>
-                        <div class="control-detail">SIEM/SOAR tools • 24/7 monitoring • Incident response plans</div>
-                        <div class="effectiveness">📊 Reduces detection time from 287 to 73 days</div>
+                        <div class="control-detail">SIEM/SOAR tools &bull; 24/7 monitoring &bull; Incident response plans</div>
+                        <div class="effectiveness">Substantially reduces detection time</div>
                     </div>
                     <div class="control-category">
                         <h3><i class="fas fa-network-wired"></i> Network Security</h3>
                         <p>Infrastructure protection and segmentation</p>
-                        <div class="control-detail">Firewalls • VPNs • Network segmentation • Zero trust architecture</div>
-                        <div class="effectiveness">📊 Limits breach scope by 60%</div>
+                        <div class="control-detail">Firewalls &bull; VPNs &bull; Network segmentation &bull; Zero trust architecture</div>
+                        <div class="effectiveness">Limits breach scope and lateral movement</div>
                     </div>
                     <div class="control-category">
                         <h3><i class="fas fa-handshake"></i> Third-Party Risk</h3>
                         <p>Vendor security and supply chain protection</p>
-                        <div class="control-detail">Due diligence • Contracts • Continuous monitoring • SLAs</div>
-                        <div class="effectiveness">📊 61% of breaches involve third parties</div>
+                        <div class="control-detail">Due diligence &bull; Contracts &bull; Continuous monitoring &bull; SLAs</div>
+                        <div class="effectiveness">Critical - many breaches involve third parties</div>
                     </div>
                     <div class="control-category">
                         <h3><i class="fas fa-graduation-cap"></i> Security Awareness</h3>
                         <p>Human-focused security education</p>
-                        <div class="control-detail">Regular training • Phishing simulations • Security culture</div>
-                        <div class="effectiveness">📊 Reduces human error incidents by 70%</div>
+                        <div class="control-detail">Regular training &bull; Phishing simulations &bull; Security culture</div>
+                        <div class="effectiveness">Meaningfully reduces human error risk</div>
                     </div>
                 </div>
                 <div class="implementation-note">
                     <strong>Implementation Reality:</strong> Most effective when implemented as layered defense. Average implementation: 18-24 months for comprehensive program.
+                </div>
+                <div style="margin-top: 1rem; font-size: 0.9rem; color: #6b7280; font-style: italic; text-align: center;">
+                    Statistics based on industry reports including IBM Security, Verizon DBIR, and cybersecurity research studies
                 </div>
             </section>
 
@@ -285,22 +290,22 @@
                     <div class="framework-item">
                         <h3><i class="fas fa-bullseye"></i> Risk Assessment</h3>
                         <p>What are our critical assets and biggest vulnerabilities?</p>
-                        <div class="framework-detail">• Crown jewel analysis • Business impact assessment • Risk appetite definition</div>
+                        <div class="framework-detail">&bull; Crown jewel analysis &bull; Business impact assessment &bull; Risk appetite definition</div>
                     </div>
                     <div class="framework-item">
                         <h3><i class="fas fa-balance-scale"></i> Investment Strategy</h3>
                         <p>How do we balance security investment with business needs?</p>
-                        <div class="framework-detail">• ROI calculations • Risk-based budgeting • Phased implementation</div>
+                        <div class="framework-detail">&bull; ROI calculations &bull; Risk-based budgeting &bull; Phased implementation</div>
                     </div>
                     <div class="framework-item">
                         <h3><i class="fas fa-chart-bar"></i> Success Metrics</h3>
                         <p>How do we measure cybersecurity effectiveness?</p>
-                        <div class="framework-detail">• Mean time to detection • Incident reduction • Compliance scores</div>
+                        <div class="framework-detail">&bull; Mean time to detection &bull; Incident reduction &bull; Compliance scores</div>
                     </div>
                     <div class="framework-item">
                         <h3><i class="fas fa-users-cog"></i> Governance Model</h3>
                         <p>Who owns cybersecurity decisions and accountability?</p>
-                        <div class="framework-detail">• Executive oversight • Cross-functional teams • Clear responsibilities</div>
+                        <div class="framework-detail">&bull; Executive oversight &bull; Cross-functional teams &bull; Clear responsibilities</div>
                     </div>
                 </div>
                 
