--- a/print.html
+++ b/print.html
@@ -305,7 +305,7 @@
 </head>
 <body>
     <div class="screen-only" style="display: block; text-align: center; padding: 20px; background: #f1f5f9; margin-bottom: 20px;">
-        <p><strong>Print-Optimized Version</strong> • This version is formatted specifically for printing • Press Ctrl/Cmd+P to print</p>
+        <p><strong>Print-Optimized Version</strong> &bull; This version is formatted specifically for printing &bull; Press Ctrl/Cmd+P to print</p>
     </div>
 
     <!-- Slide 1: Title Page -->
@@ -318,18 +318,19 @@
         </div>
         <div class="title-stats">
             <div class="stat-item">
-                <span class="stat-number">$4.88M</span>
-                <span class="stat-label">Average breach cost</span>
+                <span class="stat-number">$4.45M</span>
+                <span class="stat-label">Average breach cost*</span>
             </div>
             <div class="stat-item">
-                <span class="stat-number">194 days</span>
-                <span class="stat-label">Average detection time</span>
+                <span class="stat-number">200+</span>
+                <span class="stat-label">Days to identify</span>
             </div>
             <div class="stat-item">
-                <span class="stat-number">82%</span>
-                <span class="stat-label">Human error factor</span>
+                <span class="stat-number">68%</span>
+                <span class="stat-label">Involve human element</span>
             </div>
         </div>
+        <p style="margin-top: 16px; font-size: 10pt; color: #6b7280; font-style: italic; text-align: center;">*Based on industry reports - figures vary by organization and region</p>
     </div>
 
     <!-- Slide 2: Agenda -->
@@ -363,37 +364,37 @@
         
         <div class="stats-row">
             <div class="stat-box">
-                <span class="big-number">36%</span>
-                <span class="stat-description">of data breaches involve phishing</span>
+                <span class="big-number">~1/3</span>
+                <span class="stat-description">of data breaches involve social engineering</span>
             </div>
             <div class="stat-box">
-                <span class="big-number">73 days</span>
-                <span class="stat-description">average time to contain a breach</span>
+                <span class="big-number">70+</span>
+                <span class="stat-description">days average containment time</span>
             </div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-envelope-open-text"></i> Phishing</h3>
             <p>Deceptive messages that harvest access</p>
-            <div class="detail">36% of breaches involve phishing • Primary attack vector</div>
+            <div class="detail">Leading cause of security breaches &bull; Increasingly sophisticated</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-lock"></i> Ransomware</h3>
             <p>Data/encryption-based disruption</p>
-            <div class="detail">24% of breaches include ransomware • $1.76M avg. cost</div>
+            <div class="detail">Significant portion of breaches &bull; Multi-million dollar impact</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-key"></i> Credential Compromise</h3>
             <p>Reused or leaked passwords</p>
-            <div class="detail">16% of breaches involve stolen credentials • Often undetected</div>
+            <div class="detail">Common in web application attacks &bull; Often goes undetected</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-link"></i> Supply-Chain & Vendor Risks</h3>
             <p>Third-party exposure</p>
-            <div class="detail">15% of breaches involve third parties • Extended attack surface</div>
+            <div class="detail">Growing attack vector &bull; Difficult to monitor and control</div>
         </div>
 
         <div class="highlight-box">
@@ -428,29 +429,29 @@
         <div class="content-section">
             <h3><i class="fas fa-clock"></i> Operational Downtime</h3>
             <p>Productivity loss and system unavailability</p>
-            <div class="detail">194 days avg. identification • 73 days containment</div>
+            <div class="detail">200+ days avg. identification &bull; 70+ days containment</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-dollar-sign"></i> Financial Costs</h3>
             <p>Recovery, remediation, potential fines</p>
-            <div class="detail">$4.88M avg. total cost • 51% from lost business value</div>
+            <div class="detail">Multi-million dollar average cost &bull; Majority from business disruption</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-users"></i> Reputation Effects</h3>
             <p>Customer trust and brand impact</p>
-            <div class="detail">28% of organizations lose customers • Long-term brand impact</div>
+            <div class="detail">Significant customer loss common &bull; Long-term brand recovery needed</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-gavel"></i> Legal & Regulatory</h3>
             <p>Compliance violations and penalties</p>
-            <div class="detail">GDPR: up to 4% revenue • Avg. $1.93M regulatory costs</div>
+            <div class="detail">GDPR: up to 4% revenue &bull; SEC: material disclosure requirements</div>
         </div>
 
         <div class="highlight-box">
-            <strong>Case Study:</strong> Healthcare organization experienced phishing attack leading to 45-day system recovery, $3.2M in total costs, and 18-month reputation recovery period.
+            <strong>Industry Pattern:</strong> Organizations typically experience weeks to months of recovery time, multi-million dollar costs, and extended reputation recovery periods following significant security incidents.
         </div>
     </div>
 
@@ -459,54 +460,57 @@
         <h2>Security Control Framework</h2>
 
         <div style="text-align: center; background: #f1f5f9; padding: 12px; border-radius: 6px; margin-bottom: 16px;">
-            <strong>Common Frameworks:</strong> NIST Cybersecurity Framework • ISO 27001 • CIS Controls
+            <strong>Common Frameworks:</strong> NIST Cybersecurity Framework &bull; ISO 27001 &bull; CIS Controls
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-shield-alt"></i> Identity & Access Management</h3>
             <p>Who can access what, when, and how</p>
-            <div class="detail">Multi-factor authentication • Privileged access • Zero trust principles</div>
-            <div class="badge">📊 Prevents 99.9% of automated attacks</div>
+            <div class="detail">Multi-factor authentication &bull; Privileged access &bull; Zero trust principles</div>
+            <div class="badge">Significantly reduces automated attacks</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-database"></i> Backup & Recovery</h3>
             <p>Data protection and business continuity</p>
-            <div class="detail">3-2-1 backup rule • Regular testing • Recovery time objectives</div>
-            <div class="badge">📊 Reduces ransomware impact by 90%</div>
+            <div class="detail">3-2-1 backup rule &bull; Regular testing &bull; Recovery time objectives</div>
+            <div class="badge">Critical for ransomware recovery</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-chart-line"></i> Security Monitoring</h3>
             <p>Continuous threat detection and response</p>
-            <div class="detail">SIEM/SOAR tools • 24/7 monitoring • Incident response plans</div>
-            <div class="badge">📊 Reduces detection time from 287 to 73 days</div>
+            <div class="detail">SIEM/SOAR tools &bull; 24/7 monitoring &bull; Incident response plans</div>
+            <div class="badge">Substantially reduces detection time</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-network-wired"></i> Network Security</h3>
             <p>Infrastructure protection and segmentation</p>
-            <div class="detail">Firewalls • VPNs • Network segmentation • Zero trust architecture</div>
-            <div class="badge">📊 Limits breach scope by 60%</div>
+            <div class="detail">Firewalls &bull; VPNs &bull; Network segmentation &bull; Zero trust architecture</div>
+            <div class="badge">Limits breach scope and lateral movement</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-handshake"></i> Third-Party Risk</h3>
             <p>Vendor security and supply chain protection</p>
-            <div class="detail">Due diligence • Contracts • Continuous monitoring • SLAs</div>
-            <div class="badge">📊 61% of breaches involve third parties</div>
+            <div class="detail">Due diligence &bull; Contracts &bull; Continuous monitoring &bull; SLAs</div>
+            <div class="badge">Critical - many breaches involve third parties</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-graduation-cap"></i> Security Awareness</h3>
             <p>Human-focused security education</p>
-            <div class="detail">Regular training • Phishing simulations • Security culture</div>
-            <div class="badge">📊 Reduces human error incidents by 70%</div>
+            <div class="detail">Regular training &bull; Phishing simulations &bull; Security culture</div>
+            <div class="badge">Meaningfully reduces human error risk</div>
         </div>
 
         <div class="highlight-box">
             <strong>Implementation Reality:</strong> Most effective when implemented as layered defense. Average implementation: 18-24 months for comprehensive program.
         </div>
+        <p style="margin-top: 16px; font-size: 9pt; color: #6b7280; font-style: italic; text-align: center;">
+            Statistics based on industry reports including IBM Security, Verizon DBIR, and cybersecurity research studies
+        </p>
     </div>
 
     <!-- Slide 6: Strategic Framework -->
@@ -540,25 +544,25 @@
         <div class="content-section">
             <h3><i class="fas fa-bullseye"></i> Risk Assessment</h3>
             <p>What are our critical assets and biggest vulnerabilities?</p>
-            <div class="detail">• Crown jewel analysis • Business impact assessment • Risk appetite definition</div>
+            <div class="detail">&bull; Crown jewel analysis &bull; Business impact assessment &bull; Risk appetite definition</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-balance-scale"></i> Investment Strategy</h3>
             <p>How do we balance security investment with business needs?</p>
-            <div class="detail">• ROI calculations • Risk-based budgeting • Phased implementation</div>
+            <div class="detail">&bull; ROI calculations &bull; Risk-based budgeting &bull; Phased implementation</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-chart-bar"></i> Success Metrics</h3>
             <p>How do we measure cybersecurity effectiveness?</p>
-            <div class="detail">• Mean time to detection • Incident reduction • Compliance scores</div>
+            <div class="detail">&bull; Mean time to detection &bull; Incident reduction &bull; Compliance scores</div>
         </div>
 
         <div class="content-section">
             <h3><i class="fas fa-users-cog"></i> Governance Model</h3>
             <p>Who owns cybersecurity decisions and accountability?</p>
-            <div class="detail">• Executive oversight • Cross-functional teams • Clear responsibilities</div>
+            <div class="detail">&bull; Executive oversight &bull; Cross-functional teams &bull; Clear responsibilities</div>
         </div>
 
         <h3 style="margin-top: 20px;">Immediate Next Steps</h3>
